cs21b060_lab9/y.output
   0  $accept : program $end

   1  program : slist

   2  slist : slist assignmentExpression SEMICOLON
   3        | slist selectionStatement
   4        | slist iterationStatement
   5        | slist error
   6        |

   7  assignmentExpression : conditionalExpression
   8                       | unaryExpression ASSIGN assignmentExpression

   9  conditionalExpression : logicalOrExpression

  10  logicalOrExpression : logicalAndExpression
  11                      | logicalOrExpression OR logicalAndExpression

  12  logicalAndExpression : equalityExpression
  13                       | logicalAndExpression AND equalityExpression

  14  equalityExpression : relationalExpression
  15                     | equalityExpression EQ relationalExpression
  16                     | equalityExpression NEQ relationalExpression

  17  relationalExpression : additiveExpression
  18                       | relationalExpression LT additiveExpression
  19                       | relationalExpression GT additiveExpression
  20                       | relationalExpression LEQ additiveExpression
  21                       | relationalExpression GEQ additiveExpression

  22  additiveExpression : multiplicativeExpression
  23                     | additiveExpression ADD multiplicativeExpression
  24                     | additiveExpression SUB multiplicativeExpression

  25  multiplicativeExpression : unaryExpression
  26                           | multiplicativeExpression MUL unaryExpression
  27                           | multiplicativeExpression DIV unaryExpression

  28  unaryExpression : postfixExpression
  29                  | INC unaryExpression
  30                  | DEC unaryExpression
  31                  | ADD unaryExpression
  32                  | SUB unaryExpression
  33                  | NOT unaryExpression

  34  postfixExpression : primaryExpression
  35                    | postfixExpression INC
  36                    | postfixExpression DEC

  37  primaryExpression : INTEGER
  38                    | IDENTIFIER
  39                    | LPAREN assignmentExpression RPAREN

  40  $$1 :

  41  $$2 :

  42  selectionStatement : IF LPAREN assignmentExpression RPAREN LBRACE $$1 slist $$2 RBRACE elseSelection

  43  elseSelection : ELSE LBRACE slist RBRACE
  44                |

  45  $$3 :

  46  $$4 :

  47  iterationStatement : WHILE $$3 LPAREN assignmentExpression $$4 RPAREN LBRACE slist RBRACE

state 0
	$accept : . program $end  (0)
	slist : .  (6)

	.  reduce 6

	program  goto 1
	slist  goto 2


state 1
	$accept : program . $end  (0)

	$end  accept


state 2
	program : slist .  (1)
	slist : slist . assignmentExpression SEMICOLON  (2)
	slist : slist . selectionStatement  (3)
	slist : slist . iterationStatement  (4)
	slist : slist . error  (5)

	error  shift 3
	ADD  shift 4
	SUB  shift 5
	INC  shift 6
	DEC  shift 7
	LPAREN  shift 8
	IF  shift 9
	WHILE  shift 10
	NOT  shift 11
	INTEGER  shift 12
	IDENTIFIER  shift 13
	$end  reduce 1

	assignmentExpression  goto 14
	conditionalExpression  goto 15
	logicalOrExpression  goto 16
	logicalAndExpression  goto 17
	equalityExpression  goto 18
	relationalExpression  goto 19
	additiveExpression  goto 20
	multiplicativeExpression  goto 21
	unaryExpression  goto 22
	postfixExpression  goto 23
	primaryExpression  goto 24
	selectionStatement  goto 25
	iterationStatement  goto 26


state 3
	slist : slist error .  (5)

	.  reduce 5


state 4
	unaryExpression : ADD . unaryExpression  (31)

	ADD  shift 4
	SUB  shift 5
	INC  shift 6
	DEC  shift 7
	LPAREN  shift 8
	NOT  shift 11
	INTEGER  shift 12
	IDENTIFIER  shift 13
	.  error

	unaryExpression  goto 27
	postfixExpression  goto 23
	primaryExpression  goto 24


state 5
	unaryExpression : SUB . unaryExpression  (32)

	ADD  shift 4
	SUB  shift 5
	INC  shift 6
	DEC  shift 7
	LPAREN  shift 8
	NOT  shift 11
	INTEGER  shift 12
	IDENTIFIER  shift 13
	.  error

	unaryExpression  goto 28
	postfixExpression  goto 23
	primaryExpression  goto 24


state 6
	unaryExpression : INC . unaryExpression  (29)

	ADD  shift 4
	SUB  shift 5
	INC  shift 6
	DEC  shift 7
	LPAREN  shift 8
	NOT  shift 11
	INTEGER  shift 12
	IDENTIFIER  shift 13
	.  error

	unaryExpression  goto 29
	postfixExpression  goto 23
	primaryExpression  goto 24


state 7
	unaryExpression : DEC . unaryExpression  (30)

	ADD  shift 4
	SUB  shift 5
	INC  shift 6
	DEC  shift 7
	LPAREN  shift 8
	NOT  shift 11
	INTEGER  shift 12
	IDENTIFIER  shift 13
	.  error

	unaryExpression  goto 30
	postfixExpression  goto 23
	primaryExpression  goto 24


state 8
	primaryExpression : LPAREN . assignmentExpression RPAREN  (39)

	ADD  shift 4
	SUB  shift 5
	INC  shift 6
	DEC  shift 7
	LPAREN  shift 8
	NOT  shift 11
	INTEGER  shift 12
	IDENTIFIER  shift 13
	.  error

	assignmentExpression  goto 31
	conditionalExpression  goto 15
	logicalOrExpression  goto 16
	logicalAndExpression  goto 17
	equalityExpression  goto 18
	relationalExpression  goto 19
	additiveExpression  goto 20
	multiplicativeExpression  goto 21
	unaryExpression  goto 22
	postfixExpression  goto 23
	primaryExpression  goto 24


state 9
	selectionStatement : IF . LPAREN assignmentExpression RPAREN LBRACE $$1 slist $$2 RBRACE elseSelection  (42)

	LPAREN  shift 32
	.  error


state 10
	iterationStatement : WHILE . $$3 LPAREN assignmentExpression $$4 RPAREN LBRACE slist RBRACE  (47)
	$$3 : .  (45)

	.  reduce 45

	$$3  goto 33


state 11
	unaryExpression : NOT . unaryExpression  (33)

	ADD  shift 4
	SUB  shift 5
	INC  shift 6
	DEC  shift 7
	LPAREN  shift 8
	NOT  shift 11
	INTEGER  shift 12
	IDENTIFIER  shift 13
	.  error

	unaryExpression  goto 34
	postfixExpression  goto 23
	primaryExpression  goto 24


state 12
	primaryExpression : INTEGER .  (37)

	.  reduce 37


state 13
	primaryExpression : IDENTIFIER .  (38)

	.  reduce 38


state 14
	slist : slist assignmentExpression . SEMICOLON  (2)

	SEMICOLON  shift 35
	.  error


state 15
	assignmentExpression : conditionalExpression .  (7)

	.  reduce 7


state 16
	conditionalExpression : logicalOrExpression .  (9)
	logicalOrExpression : logicalOrExpression . OR logicalAndExpression  (11)

	OR  shift 36
	RPAREN  reduce 9
	SEMICOLON  reduce 9


state 17
	logicalOrExpression : logicalAndExpression .  (10)
	logicalAndExpression : logicalAndExpression . AND equalityExpression  (13)

	AND  shift 37
	RPAREN  reduce 10
	SEMICOLON  reduce 10
	OR  reduce 10


state 18
	logicalAndExpression : equalityExpression .  (12)
	equalityExpression : equalityExpression . EQ relationalExpression  (15)
	equalityExpression : equalityExpression . NEQ relationalExpression  (16)

	EQ  shift 38
	NEQ  shift 39
	RPAREN  reduce 12
	SEMICOLON  reduce 12
	AND  reduce 12
	OR  reduce 12


state 19
	equalityExpression : relationalExpression .  (14)
	relationalExpression : relationalExpression . LT additiveExpression  (18)
	relationalExpression : relationalExpression . GT additiveExpression  (19)
	relationalExpression : relationalExpression . LEQ additiveExpression  (20)
	relationalExpression : relationalExpression . GEQ additiveExpression  (21)

	LT  shift 40
	GT  shift 41
	LEQ  shift 42
	GEQ  shift 43
	RPAREN  reduce 14
	SEMICOLON  reduce 14
	EQ  reduce 14
	NEQ  reduce 14
	AND  reduce 14
	OR  reduce 14


state 20
	relationalExpression : additiveExpression .  (17)
	additiveExpression : additiveExpression . ADD multiplicativeExpression  (23)
	additiveExpression : additiveExpression . SUB multiplicativeExpression  (24)

	ADD  shift 44
	SUB  shift 45
	RPAREN  reduce 17
	SEMICOLON  reduce 17
	LT  reduce 17
	GT  reduce 17
	LEQ  reduce 17
	GEQ  reduce 17
	EQ  reduce 17
	NEQ  reduce 17
	AND  reduce 17
	OR  reduce 17


state 21
	additiveExpression : multiplicativeExpression .  (22)
	multiplicativeExpression : multiplicativeExpression . MUL unaryExpression  (26)
	multiplicativeExpression : multiplicativeExpression . DIV unaryExpression  (27)

	MUL  shift 46
	DIV  shift 47
	ADD  reduce 22
	SUB  reduce 22
	RPAREN  reduce 22
	SEMICOLON  reduce 22
	LT  reduce 22
	GT  reduce 22
	LEQ  reduce 22
	GEQ  reduce 22
	EQ  reduce 22
	NEQ  reduce 22
	AND  reduce 22
	OR  reduce 22


state 22
	assignmentExpression : unaryExpression . ASSIGN assignmentExpression  (8)
	multiplicativeExpression : unaryExpression .  (25)

	ASSIGN  shift 48
	ADD  reduce 25
	SUB  reduce 25
	MUL  reduce 25
	DIV  reduce 25
	RPAREN  reduce 25
	SEMICOLON  reduce 25
	LT  reduce 25
	GT  reduce 25
	LEQ  reduce 25
	GEQ  reduce 25
	EQ  reduce 25
	NEQ  reduce 25
	AND  reduce 25
	OR  reduce 25


state 23
	unaryExpression : postfixExpression .  (28)
	postfixExpression : postfixExpression . INC  (35)
	postfixExpression : postfixExpression . DEC  (36)

	INC  shift 49
	DEC  shift 50
	ADD  reduce 28
	SUB  reduce 28
	MUL  reduce 28
	DIV  reduce 28
	ASSIGN  reduce 28
	RPAREN  reduce 28
	SEMICOLON  reduce 28
	LT  reduce 28
	GT  reduce 28
	LEQ  reduce 28
	GEQ  reduce 28
	EQ  reduce 28
	NEQ  reduce 28
	AND  reduce 28
	OR  reduce 28


state 24
	postfixExpression : primaryExpression .  (34)

	.  reduce 34


state 25
	slist : slist selectionStatement .  (3)

	.  reduce 3


state 26
	slist : slist iterationStatement .  (4)

	.  reduce 4


state 27
	unaryExpression : ADD unaryExpression .  (31)

	.  reduce 31


state 28
	unaryExpression : SUB unaryExpression .  (32)

	.  reduce 32


state 29
	unaryExpression : INC unaryExpression .  (29)

	.  reduce 29


state 30
	unaryExpression : DEC unaryExpression .  (30)

	.  reduce 30


state 31
	primaryExpression : LPAREN assignmentExpression . RPAREN  (39)

	RPAREN  shift 51
	.  error


state 32
	selectionStatement : IF LPAREN . assignmentExpression RPAREN LBRACE $$1 slist $$2 RBRACE elseSelection  (42)

	ADD  shift 4
	SUB  shift 5
	INC  shift 6
	DEC  shift 7
	LPAREN  shift 8
	NOT  shift 11
	INTEGER  shift 12
	IDENTIFIER  shift 13
	.  error

	assignmentExpression  goto 52
	conditionalExpression  goto 15
	logicalOrExpression  goto 16
	logicalAndExpression  goto 17
	equalityExpression  goto 18
	relationalExpression  goto 19
	additiveExpression  goto 20
	multiplicativeExpression  goto 21
	unaryExpression  goto 22
	postfixExpression  goto 23
	primaryExpression  goto 24


state 33
	iterationStatement : WHILE $$3 . LPAREN assignmentExpression $$4 RPAREN LBRACE slist RBRACE  (47)

	LPAREN  shift 53
	.  error


state 34
	unaryExpression : NOT unaryExpression .  (33)

	.  reduce 33


state 35
	slist : slist assignmentExpression SEMICOLON .  (2)

	.  reduce 2


state 36
	logicalOrExpression : logicalOrExpression OR . logicalAndExpression  (11)

	ADD  shift 4
	SUB  shift 5
	INC  shift 6
	DEC  shift 7
	LPAREN  shift 8
	NOT  shift 11
	INTEGER  shift 12
	IDENTIFIER  shift 13
	.  error

	logicalAndExpression  goto 54
	equalityExpression  goto 18
	relationalExpression  goto 19
	additiveExpression  goto 20
	multiplicativeExpression  goto 21
	unaryExpression  goto 55
	postfixExpression  goto 23
	primaryExpression  goto 24


state 37
	logicalAndExpression : logicalAndExpression AND . equalityExpression  (13)

	ADD  shift 4
	SUB  shift 5
	INC  shift 6
	DEC  shift 7
	LPAREN  shift 8
	NOT  shift 11
	INTEGER  shift 12
	IDENTIFIER  shift 13
	.  error

	equalityExpression  goto 56
	relationalExpression  goto 19
	additiveExpression  goto 20
	multiplicativeExpression  goto 21
	unaryExpression  goto 55
	postfixExpression  goto 23
	primaryExpression  goto 24


state 38
	equalityExpression : equalityExpression EQ . relationalExpression  (15)

	ADD  shift 4
	SUB  shift 5
	INC  shift 6
	DEC  shift 7
	LPAREN  shift 8
	NOT  shift 11
	INTEGER  shift 12
	IDENTIFIER  shift 13
	.  error

	relationalExpression  goto 57
	additiveExpression  goto 20
	multiplicativeExpression  goto 21
	unaryExpression  goto 55
	postfixExpression  goto 23
	primaryExpression  goto 24


state 39
	equalityExpression : equalityExpression NEQ . relationalExpression  (16)

	ADD  shift 4
	SUB  shift 5
	INC  shift 6
	DEC  shift 7
	LPAREN  shift 8
	NOT  shift 11
	INTEGER  shift 12
	IDENTIFIER  shift 13
	.  error

	relationalExpression  goto 58
	additiveExpression  goto 20
	multiplicativeExpression  goto 21
	unaryExpression  goto 55
	postfixExpression  goto 23
	primaryExpression  goto 24


state 40
	relationalExpression : relationalExpression LT . additiveExpression  (18)

	ADD  shift 4
	SUB  shift 5
	INC  shift 6
	DEC  shift 7
	LPAREN  shift 8
	NOT  shift 11
	INTEGER  shift 12
	IDENTIFIER  shift 13
	.  error

	additiveExpression  goto 59
	multiplicativeExpression  goto 21
	unaryExpression  goto 55
	postfixExpression  goto 23
	primaryExpression  goto 24


state 41
	relationalExpression : relationalExpression GT . additiveExpression  (19)

	ADD  shift 4
	SUB  shift 5
	INC  shift 6
	DEC  shift 7
	LPAREN  shift 8
	NOT  shift 11
	INTEGER  shift 12
	IDENTIFIER  shift 13
	.  error

	additiveExpression  goto 60
	multiplicativeExpression  goto 21
	unaryExpression  goto 55
	postfixExpression  goto 23
	primaryExpression  goto 24


state 42
	relationalExpression : relationalExpression LEQ . additiveExpression  (20)

	ADD  shift 4
	SUB  shift 5
	INC  shift 6
	DEC  shift 7
	LPAREN  shift 8
	NOT  shift 11
	INTEGER  shift 12
	IDENTIFIER  shift 13
	.  error

	additiveExpression  goto 61
	multiplicativeExpression  goto 21
	unaryExpression  goto 55
	postfixExpression  goto 23
	primaryExpression  goto 24


state 43
	relationalExpression : relationalExpression GEQ . additiveExpression  (21)

	ADD  shift 4
	SUB  shift 5
	INC  shift 6
	DEC  shift 7
	LPAREN  shift 8
	NOT  shift 11
	INTEGER  shift 12
	IDENTIFIER  shift 13
	.  error

	additiveExpression  goto 62
	multiplicativeExpression  goto 21
	unaryExpression  goto 55
	postfixExpression  goto 23
	primaryExpression  goto 24


state 44
	additiveExpression : additiveExpression ADD . multiplicativeExpression  (23)

	ADD  shift 4
	SUB  shift 5
	INC  shift 6
	DEC  shift 7
	LPAREN  shift 8
	NOT  shift 11
	INTEGER  shift 12
	IDENTIFIER  shift 13
	.  error

	multiplicativeExpression  goto 63
	unaryExpression  goto 55
	postfixExpression  goto 23
	primaryExpression  goto 24


state 45
	additiveExpression : additiveExpression SUB . multiplicativeExpression  (24)

	ADD  shift 4
	SUB  shift 5
	INC  shift 6
	DEC  shift 7
	LPAREN  shift 8
	NOT  shift 11
	INTEGER  shift 12
	IDENTIFIER  shift 13
	.  error

	multiplicativeExpression  goto 64
	unaryExpression  goto 55
	postfixExpression  goto 23
	primaryExpression  goto 24


state 46
	multiplicativeExpression : multiplicativeExpression MUL . unaryExpression  (26)

	ADD  shift 4
	SUB  shift 5
	INC  shift 6
	DEC  shift 7
	LPAREN  shift 8
	NOT  shift 11
	INTEGER  shift 12
	IDENTIFIER  shift 13
	.  error

	unaryExpression  goto 65
	postfixExpression  goto 23
	primaryExpression  goto 24


state 47
	multiplicativeExpression : multiplicativeExpression DIV . unaryExpression  (27)

	ADD  shift 4
	SUB  shift 5
	INC  shift 6
	DEC  shift 7
	LPAREN  shift 8
	NOT  shift 11
	INTEGER  shift 12
	IDENTIFIER  shift 13
	.  error

	unaryExpression  goto 66
	postfixExpression  goto 23
	primaryExpression  goto 24


state 48
	assignmentExpression : unaryExpression ASSIGN . assignmentExpression  (8)

	ADD  shift 4
	SUB  shift 5
	INC  shift 6
	DEC  shift 7
	LPAREN  shift 8
	NOT  shift 11
	INTEGER  shift 12
	IDENTIFIER  shift 13
	.  error

	assignmentExpression  goto 67
	conditionalExpression  goto 15
	logicalOrExpression  goto 16
	logicalAndExpression  goto 17
	equalityExpression  goto 18
	relationalExpression  goto 19
	additiveExpression  goto 20
	multiplicativeExpression  goto 21
	unaryExpression  goto 22
	postfixExpression  goto 23
	primaryExpression  goto 24


state 49
	postfixExpression : postfixExpression INC .  (35)

	.  reduce 35


state 50
	postfixExpression : postfixExpression DEC .  (36)

	.  reduce 36


state 51
	primaryExpression : LPAREN assignmentExpression RPAREN .  (39)

	.  reduce 39


state 52
	selectionStatement : IF LPAREN assignmentExpression . RPAREN LBRACE $$1 slist $$2 RBRACE elseSelection  (42)

	RPAREN  shift 68
	.  error


state 53
	iterationStatement : WHILE $$3 LPAREN . assignmentExpression $$4 RPAREN LBRACE slist RBRACE  (47)

	ADD  shift 4
	SUB  shift 5
	INC  shift 6
	DEC  shift 7
	LPAREN  shift 8
	NOT  shift 11
	INTEGER  shift 12
	IDENTIFIER  shift 13
	.  error

	assignmentExpression  goto 69
	conditionalExpression  goto 15
	logicalOrExpression  goto 16
	logicalAndExpression  goto 17
	equalityExpression  goto 18
	relationalExpression  goto 19
	additiveExpression  goto 20
	multiplicativeExpression  goto 21
	unaryExpression  goto 22
	postfixExpression  goto 23
	primaryExpression  goto 24


state 54
	logicalOrExpression : logicalOrExpression OR logicalAndExpression .  (11)
	logicalAndExpression : logicalAndExpression . AND equalityExpression  (13)

	AND  shift 37
	RPAREN  reduce 11
	SEMICOLON  reduce 11
	OR  reduce 11


state 55
	multiplicativeExpression : unaryExpression .  (25)

	.  reduce 25


state 56
	logicalAndExpression : logicalAndExpression AND equalityExpression .  (13)
	equalityExpression : equalityExpression . EQ relationalExpression  (15)
	equalityExpression : equalityExpression . NEQ relationalExpression  (16)

	EQ  shift 38
	NEQ  shift 39
	RPAREN  reduce 13
	SEMICOLON  reduce 13
	AND  reduce 13
	OR  reduce 13


state 57
	equalityExpression : equalityExpression EQ relationalExpression .  (15)
	relationalExpression : relationalExpression . LT additiveExpression  (18)
	relationalExpression : relationalExpression . GT additiveExpression  (19)
	relationalExpression : relationalExpression . LEQ additiveExpression  (20)
	relationalExpression : relationalExpression . GEQ additiveExpression  (21)

	LT  shift 40
	GT  shift 41
	LEQ  shift 42
	GEQ  shift 43
	RPAREN  reduce 15
	SEMICOLON  reduce 15
	EQ  reduce 15
	NEQ  reduce 15
	AND  reduce 15
	OR  reduce 15


state 58
	equalityExpression : equalityExpression NEQ relationalExpression .  (16)
	relationalExpression : relationalExpression . LT additiveExpression  (18)
	relationalExpression : relationalExpression . GT additiveExpression  (19)
	relationalExpression : relationalExpression . LEQ additiveExpression  (20)
	relationalExpression : relationalExpression . GEQ additiveExpression  (21)

	LT  shift 40
	GT  shift 41
	LEQ  shift 42
	GEQ  shift 43
	RPAREN  reduce 16
	SEMICOLON  reduce 16
	EQ  reduce 16
	NEQ  reduce 16
	AND  reduce 16
	OR  reduce 16


state 59
	relationalExpression : relationalExpression LT additiveExpression .  (18)
	additiveExpression : additiveExpression . ADD multiplicativeExpression  (23)
	additiveExpression : additiveExpression . SUB multiplicativeExpression  (24)

	ADD  shift 44
	SUB  shift 45
	RPAREN  reduce 18
	SEMICOLON  reduce 18
	LT  reduce 18
	GT  reduce 18
	LEQ  reduce 18
	GEQ  reduce 18
	EQ  reduce 18
	NEQ  reduce 18
	AND  reduce 18
	OR  reduce 18


state 60
	relationalExpression : relationalExpression GT additiveExpression .  (19)
	additiveExpression : additiveExpression . ADD multiplicativeExpression  (23)
	additiveExpression : additiveExpression . SUB multiplicativeExpression  (24)

	ADD  shift 44
	SUB  shift 45
	RPAREN  reduce 19
	SEMICOLON  reduce 19
	LT  reduce 19
	GT  reduce 19
	LEQ  reduce 19
	GEQ  reduce 19
	EQ  reduce 19
	NEQ  reduce 19
	AND  reduce 19
	OR  reduce 19


state 61
	relationalExpression : relationalExpression LEQ additiveExpression .  (20)
	additiveExpression : additiveExpression . ADD multiplicativeExpression  (23)
	additiveExpression : additiveExpression . SUB multiplicativeExpression  (24)

	ADD  shift 44
	SUB  shift 45
	RPAREN  reduce 20
	SEMICOLON  reduce 20
	LT  reduce 20
	GT  reduce 20
	LEQ  reduce 20
	GEQ  reduce 20
	EQ  reduce 20
	NEQ  reduce 20
	AND  reduce 20
	OR  reduce 20


state 62
	relationalExpression : relationalExpression GEQ additiveExpression .  (21)
	additiveExpression : additiveExpression . ADD multiplicativeExpression  (23)
	additiveExpression : additiveExpression . SUB multiplicativeExpression  (24)

	ADD  shift 44
	SUB  shift 45
	RPAREN  reduce 21
	SEMICOLON  reduce 21
	LT  reduce 21
	GT  reduce 21
	LEQ  reduce 21
	GEQ  reduce 21
	EQ  reduce 21
	NEQ  reduce 21
	AND  reduce 21
	OR  reduce 21


state 63
	additiveExpression : additiveExpression ADD multiplicativeExpression .  (23)
	multiplicativeExpression : multiplicativeExpression . MUL unaryExpression  (26)
	multiplicativeExpression : multiplicativeExpression . DIV unaryExpression  (27)

	MUL  shift 46
	DIV  shift 47
	ADD  reduce 23
	SUB  reduce 23
	RPAREN  reduce 23
	SEMICOLON  reduce 23
	LT  reduce 23
	GT  reduce 23
	LEQ  reduce 23
	GEQ  reduce 23
	EQ  reduce 23
	NEQ  reduce 23
	AND  reduce 23
	OR  reduce 23


state 64
	additiveExpression : additiveExpression SUB multiplicativeExpression .  (24)
	multiplicativeExpression : multiplicativeExpression . MUL unaryExpression  (26)
	multiplicativeExpression : multiplicativeExpression . DIV unaryExpression  (27)

	MUL  shift 46
	DIV  shift 47
	ADD  reduce 24
	SUB  reduce 24
	RPAREN  reduce 24
	SEMICOLON  reduce 24
	LT  reduce 24
	GT  reduce 24
	LEQ  reduce 24
	GEQ  reduce 24
	EQ  reduce 24
	NEQ  reduce 24
	AND  reduce 24
	OR  reduce 24


state 65
	multiplicativeExpression : multiplicativeExpression MUL unaryExpression .  (26)

	.  reduce 26


state 66
	multiplicativeExpression : multiplicativeExpression DIV unaryExpression .  (27)

	.  reduce 27


state 67
	assignmentExpression : unaryExpression ASSIGN assignmentExpression .  (8)

	.  reduce 8


state 68
	selectionStatement : IF LPAREN assignmentExpression RPAREN . LBRACE $$1 slist $$2 RBRACE elseSelection  (42)

	LBRACE  shift 70
	.  error


state 69
	iterationStatement : WHILE $$3 LPAREN assignmentExpression . $$4 RPAREN LBRACE slist RBRACE  (47)
	$$4 : .  (46)

	.  reduce 46

	$$4  goto 71


state 70
	selectionStatement : IF LPAREN assignmentExpression RPAREN LBRACE . $$1 slist $$2 RBRACE elseSelection  (42)
	$$1 : .  (40)

	.  reduce 40

	$$1  goto 72


state 71
	iterationStatement : WHILE $$3 LPAREN assignmentExpression $$4 . RPAREN LBRACE slist RBRACE  (47)

	RPAREN  shift 73
	.  error


state 72
	selectionStatement : IF LPAREN assignmentExpression RPAREN LBRACE $$1 . slist $$2 RBRACE elseSelection  (42)
	slist : .  (6)

	.  reduce 6

	slist  goto 74


state 73
	iterationStatement : WHILE $$3 LPAREN assignmentExpression $$4 RPAREN . LBRACE slist RBRACE  (47)

	LBRACE  shift 75
	.  error


state 74
	slist : slist . assignmentExpression SEMICOLON  (2)
	slist : slist . selectionStatement  (3)
	slist : slist . iterationStatement  (4)
	slist : slist . error  (5)
	selectionStatement : IF LPAREN assignmentExpression RPAREN LBRACE $$1 slist . $$2 RBRACE elseSelection  (42)
	$$2 : .  (41)

	error  shift 3
	ADD  shift 4
	SUB  shift 5
	INC  shift 6
	DEC  shift 7
	LPAREN  shift 8
	IF  shift 9
	WHILE  shift 10
	NOT  shift 11
	INTEGER  shift 12
	IDENTIFIER  shift 13
	RBRACE  reduce 41

	assignmentExpression  goto 14
	conditionalExpression  goto 15
	logicalOrExpression  goto 16
	logicalAndExpression  goto 17
	equalityExpression  goto 18
	relationalExpression  goto 19
	additiveExpression  goto 20
	multiplicativeExpression  goto 21
	unaryExpression  goto 22
	postfixExpression  goto 23
	primaryExpression  goto 24
	selectionStatement  goto 25
	iterationStatement  goto 26
	$$2  goto 76


state 75
	iterationStatement : WHILE $$3 LPAREN assignmentExpression $$4 RPAREN LBRACE . slist RBRACE  (47)
	slist : .  (6)

	.  reduce 6

	slist  goto 77


state 76
	selectionStatement : IF LPAREN assignmentExpression RPAREN LBRACE $$1 slist $$2 . RBRACE elseSelection  (42)

	RBRACE  shift 78
	.  error


state 77
	slist : slist . assignmentExpression SEMICOLON  (2)
	slist : slist . selectionStatement  (3)
	slist : slist . iterationStatement  (4)
	slist : slist . error  (5)
	iterationStatement : WHILE $$3 LPAREN assignmentExpression $$4 RPAREN LBRACE slist . RBRACE  (47)

	error  shift 3
	ADD  shift 4
	SUB  shift 5
	INC  shift 6
	DEC  shift 7
	LPAREN  shift 8
	RBRACE  shift 79
	IF  shift 9
	WHILE  shift 10
	NOT  shift 11
	INTEGER  shift 12
	IDENTIFIER  shift 13
	.  error

	assignmentExpression  goto 14
	conditionalExpression  goto 15
	logicalOrExpression  goto 16
	logicalAndExpression  goto 17
	equalityExpression  goto 18
	relationalExpression  goto 19
	additiveExpression  goto 20
	multiplicativeExpression  goto 21
	unaryExpression  goto 22
	postfixExpression  goto 23
	primaryExpression  goto 24
	selectionStatement  goto 25
	iterationStatement  goto 26


state 78
	selectionStatement : IF LPAREN assignmentExpression RPAREN LBRACE $$1 slist $$2 RBRACE . elseSelection  (42)
	elseSelection : .  (44)

	ELSE  shift 80
	$end  reduce 44
	error  reduce 44
	ADD  reduce 44
	SUB  reduce 44
	INC  reduce 44
	DEC  reduce 44
	LPAREN  reduce 44
	RBRACE  reduce 44
	IF  reduce 44
	WHILE  reduce 44
	NOT  reduce 44
	INTEGER  reduce 44
	IDENTIFIER  reduce 44

	elseSelection  goto 81


state 79
	iterationStatement : WHILE $$3 LPAREN assignmentExpression $$4 RPAREN LBRACE slist RBRACE .  (47)

	.  reduce 47


state 80
	elseSelection : ELSE . LBRACE slist RBRACE  (43)

	LBRACE  shift 82
	.  error


state 81
	selectionStatement : IF LPAREN assignmentExpression RPAREN LBRACE $$1 slist $$2 RBRACE elseSelection .  (42)

	.  reduce 42


state 82
	elseSelection : ELSE LBRACE . slist RBRACE  (43)
	slist : .  (6)

	.  reduce 6

	slist  goto 83


state 83
	slist : slist . assignmentExpression SEMICOLON  (2)
	slist : slist . selectionStatement  (3)
	slist : slist . iterationStatement  (4)
	slist : slist . error  (5)
	elseSelection : ELSE LBRACE slist . RBRACE  (43)

	error  shift 3
	ADD  shift 4
	SUB  shift 5
	INC  shift 6
	DEC  shift 7
	LPAREN  shift 8
	RBRACE  shift 84
	IF  shift 9
	WHILE  shift 10
	NOT  shift 11
	INTEGER  shift 12
	IDENTIFIER  shift 13
	.  error

	assignmentExpression  goto 14
	conditionalExpression  goto 15
	logicalOrExpression  goto 16
	logicalAndExpression  goto 17
	equalityExpression  goto 18
	relationalExpression  goto 19
	additiveExpression  goto 20
	multiplicativeExpression  goto 21
	unaryExpression  goto 22
	postfixExpression  goto 23
	primaryExpression  goto 24
	selectionStatement  goto 25
	iterationStatement  goto 26


state 84
	elseSelection : ELSE LBRACE slist RBRACE .  (43)

	.  reduce 43


30 terminals, 21 nonterminals
48 grammar rules, 85 states

grammar parser grammar
symbol# value# symbol
     0      0  $end
     1    256  error
     2    257  ADD
     3    258  SUB
     4    259  MUL
     5    260  DIV
     6    261  INC
     7    262  DEC
     8    263  ASSIGN
     9    264  LPAREN
    10    265  RPAREN
    11    266  LBRACE
    12    267  RBRACE
    13    268  LBRACKET
    14    269  RBRACKET
    15    270  SEMICOLON
    16    271  IF
    17    272  ELSE
    18    273  WHILE
    19    274  LT
    20    275  GT
    21    276  LEQ
    22    277  GEQ
    23    278  EQ
    24    279  NEQ
    25    280  AND
    26    281  OR
    27    282  NOT
    28    283  INTEGER
    29    284  IDENTIFIER
    30    285  $accept
    31    286  program
    32    287  slist
    33    288  assignmentExpression
    34    289  conditionalExpression
    35    290  logicalOrExpression
    36    291  logicalAndExpression
    37    292  equalityExpression
    38    293  relationalExpression
    39    294  additiveExpression
    40    295  multiplicativeExpression
    41    296  unaryExpression
    42    297  postfixExpression
    43    298  primaryExpression
    44    299  selectionStatement
    45    300  elseSelection
    46    301  iterationStatement
    47    302  $$1
    48    303  $$2
    49    304  $$3
    50    305  $$4
